--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "nodemon": "^2.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-scripts": "4.0.0"
+    "react-image-filter": "^0.1.2",
+    "react-scripts": "4.0.0",
+    "sharp": "^0.29.1"
   },
   "proxy": "http://localhost:5000/",
   "scripts": {
