--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "@testing-library/jest-dom": "5.11.6",
     "@testing-library/react": "11.1.2",
     "@testing-library/user-event": "12.2.2",
+    "formik": "^2.2.9",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.3",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-scripts": "4.0.0",
-    "sharp": "^0.29.1"
+    "sharp": "^0.29.1",
+    "yup": "^0.32.9"
   },
   "proxy": "http://localhost:5000/",
   "scripts": {
